@@ -13,6 +13,8 @@ SQLObject 0.7.7
 Bug Fixes
 ---------
 
+* Fixed a bug in SQLRelatedJoin that ignored per-instance connection.
+
 * Fixed a bug in MySQL connection in case there is no charset in the DB URI.
 
 SQLObject 0.7.6
